Added hr divider, rounded corners to img,

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -20,6 +20,7 @@ body {
         left: 4%;
         height: 100px;
         margin-top: -50px;
+       font-family: 'Open Sans', sans-serif;
         font-size: 23px;
 }
 .iconbell {
@@ -35,6 +36,7 @@ body {
         right: 28%;
         height: 100px;
         margin-top: -50px;
+        border-radius: 50%;
 }
 .username {
         position: absolute;
@@ -42,7 +44,7 @@ body {
         right: 3%;
         height: 100px;
         margin-top: -50px;
-}
+    }
 a:link {
         /* Applies to all unvisited links */
         text-decoration: none;
@@ -63,3 +65,19 @@ a:active {
         text-decoration: underline;
         color: white;
 }
+
+#hr {
+   
+    border-color:#6266bf;
+    -webkit-transform:rotate(90deg);
+    position: absolute;
+    width:50px;
+    height 100px;
+    right:125px;
+    top: 35%;
+    margin-bottom: -1px;
+    border:1;
+
+    
+}
+
