--- a/stylesheet.css
+++ b/stylesheet.css
@@ -29,6 +29,8 @@ body {
         right: 40%;
         height: 100px;
         margin-top: -50px;
+        width:25px;
+        height:25px;
 }
 .userpic {
         position: absolute;
@@ -37,6 +39,8 @@ body {
         height: 100px;
         margin-top: -50px;
         border-radius: 50%;
+        width:25px;
+        height:25px;
 }
 .username {
         position: absolute;
@@ -44,6 +48,7 @@ body {
         right: 3%;
         height: 100px;
         margin-top: -50px;
+        
     }
 a:link {
         /* Applies to all unvisited links */
@@ -72,11 +77,10 @@ a:active {
     -webkit-transform:rotate(90deg);
     position: absolute;
     width:50px;
-    height 100px;
     right:125px;
     top: 35%;
     margin-bottom: -1px;
-    border:1;
+   
 
     
 }
@@ -96,3 +100,63 @@ a:active {
   margin-left: 8px;
   
 }
+
+.dash {
+   color: gray;
+   font-size: 18px;
+   position: absolute;
+   top: 80px;
+   margin-left: 70px; 
+}
+
+body{
+  background: #f2f2f2;
+  font-family: 'Open Sans', sans-serif;
+}
+
+.search {
+  width: 100%;
+  position: relative
+}
+
+.searchTerm {
+  float: left;
+  width: 100%;
+  border: 3px solid #7477bf;
+  padding: 5px;
+  height: 20px;
+  border-radius: 5px;
+  outline: none;
+  color: #9DBFAF;
+}
+
+.searchTerm:focus{
+  color: #00B4CC;
+}
+
+.searchButton {
+  position: absolute;  
+  right: -50px;
+  width: 40px;
+  height: 36px;
+  border: 1px solid #7477bf;
+  background: #7477bf;
+  text-align: center;
+  color: #fff;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+/*Resize the wrap to see the search bar change!*/
+.wrap{
+  width: 30%;
+  position: absolute;
+  top: 18%;
+  right: 2%;
+  transform: translate(-50%, -50%);
+}
+
+
+
+
