--- a/stylesheet.css
+++ b/stylesheet.css
@@ -21,12 +21,12 @@ body {
         height: 100px;
         margin-top: -50px;
        font-family: 'Open Sans', sans-serif;
-        font-size: 23px;
+        font-size: 20px;
 }
-.bell {
+#noti_Button {
         position: absolute;
         top: 90%;
-        right: 40%;
+        right: 58%;
         height: 100px;
         margin-top: -50px;
         width:25px;
@@ -35,7 +35,7 @@ body {
 .userpic {
         position: absolute;
         top: 90%;
-        right: 28%;
+        right: 48%;
         height: 100px;
         margin-top: -50px;
         border-radius: 50%;
@@ -45,7 +45,7 @@ body {
 .username {
         position: absolute;
         top: 90%;
-        right: 3%;
+        right:22%;
         height: 100px;
         margin-top: -50px;
         
@@ -77,7 +77,7 @@ a:active {
     -webkit-transform:rotate(90deg);
     position: absolute;
     width:50px;
-    right:125px;
+    right:200px;
     top: 35%;
     margin-bottom: -1px;
    
@@ -87,14 +87,15 @@ a:active {
 
 #navigation {
     position: absolute;
-    left:0; top:80px; bottom: 0;
+    left:0; top:80px; bottom: 0px;
     width: 55px;
+    height: 1000px;
     background-color: #4d4c72;   
 }
 
 [class^="icon"] {
-  width: 35px;
-  height: 50px;
+  width: 25px;
+  height: 40px;
   position: relative;
   top: 10px;
   margin-left: 8px;
@@ -150,20 +151,184 @@ body{
 
 /*Resize the wrap to see the search bar change!*/
 .wrap{
-  width: 30%;
+  width: 25%;
   position: absolute;
-  top: 18%;
-  right: 2%;
+  top: 19%;
+  left: 70%;
   transform: translate(-50%, -50%);
 }
 
 
-.messagebar-default{
-     position: absolute;
-        top: 30%;
-        left: 14%;
-        height: 50px;
-       
-        margin-top: -40px;
+ .messagebar-default {
+    position: absolute;
+    width:70%;
+    right: -75px;
+    top:45px;
+    margin: 100px;
+    padding: 0;
+    color: #fff;
+    font-size: 12px;
+
+        
 }
 
+
+ #myChart {
+    position: relative; 
+     height:90vh; 
+     width:85vw;
+    right: -60px;
+    top:230px;
+    margin: 0px;
+    padding: 0; 
+     
+	}
+
+
+
+ #myLineChart {
+    position: relative; 
+     height:90vh; 
+     width:85vw;
+    right: -60px;
+    top:150px;
+    margin: 0px;
+    padding: 0; 
+     
+	}
+
+
+ #myDoughnutChart{
+     position: absolute;  
+     top:810px;
+       right: 1px;
+  
+   
+     
+	}
+
+.twitter {
+	width: 140px;
+	height: 120px;
+     position: absolute;  
+     bottom:-700px;
+       left: 80px;
+   
+}
+
+.facebook {
+	width: 140px;
+	height: 120px;
+     position: absolute;  
+     bottom:-900px;
+    left: 80px;
+   
+}
+
+.google {
+    	
+		width: 140px;
+	height: 120px;
+     position: absolute;  
+     bottom:-1090px;
+    left: 80px;
+  
+    
+}
+
+
+/* THE POPULAR RED NOTIFICATIONS COUNTER. */
+    #noti_Counter {
+        display:block;
+        position:absolute;
+        background:lightgreen;
+        color:#FFF;
+        top:25px;
+        left:140px;
+        padding:3px 3px;
+        margin:-6px 0 0 25px;
+        border-radius:50%;
+        -moz-border-radius:50%x; 
+        -webkit-border-radius:50%;
+        z-index:1;
+    }
+        
+    /* THE NOTIFICAIONS WINDOW. THIS REMAINS HIDDEN WHEN THE PAGE LOADS. */
+    #notifications {
+        display:none;
+        width:200px;
+        height: 200px;
+        position:absolute;
+        top:60px;
+        left:134px;
+        background:#FFF;
+        border:solid 1px rgba(100, 100, 100, .20);
+        -webkit-box-shadow:0 3px 8px rgba(0, 0, 0, .20);
+        z-index: 0;
+    }
+    /* AN ARROW LIKE STRUCTURE JUST OVER THE NOTIFICATIONS WINDOW */
+    #notifications:before {         
+        content: '';
+        display:block;
+        width:0;
+        height:0;
+        color:transparent;
+        border:10px solid #CCC;
+        border-color:transparent transparent #FFF;
+        margin-top:-20px;
+        margin-left:10px;
+    }
+        
+    h3 {
+        display:block;
+        color:#333; 
+        background:#FFF;
+        font-weight:bold;
+        font-size:13px;    
+        padding:8px;
+        margin:0;
+        border-bottom:solid 1px rgba(100, 100, 100, .30);
+    }
+        
+    .seeAll {
+        background:#F6F7F8;
+        padding:8px;
+        font-size:12px;
+        font-weight:bold;
+        border-top:solid 1px rgba(100, 100, 100, .30);
+        text-align:center;
+    }
+    .seeAll a {
+        color:#3b5998;
+    }
+    .seeAll a:hover {
+        background:#F6F7F8;
+        color:#3b5998;
+        text-decoration:underline;
+    }
+
+h1 {
+    
+    font-size:12px;
+}
+
+.traffic {
+     font-size: 13px;
+   position: absolute;
+   top: 190px;
+   margin-left: 70px; 
+}
+
+.daily {
+     font-size: 13px;
+   position: absolute;
+   top: 470px;
+   margin-left: 70px; 
+}
+
+.mobile {
+    font-size: 13px;
+   position: absolute;
+   top: 750px;
+   margin-left: 70px; 
+}
