Customized social icons//brought notification pop up window forward
Added z-index to bring objects forward

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -111,7 +111,7 @@ a:active {
 }
 
 body{
-  background: #f2f2f2;
+  background: #0000;
   font-family: 'Open Sans', sans-serif;
 }
 
@@ -208,34 +208,115 @@ body{
 	}
 
 .twitter {
-	width: 140px;
+	width: 40px;
 	height: 120px;
+     position: absolute;  
+     bottom:-714px;
+       left: 110px;
+       z-index: 1;
+       fill:white;
+       
+  
+   
+}
+
+.twitterbox {
      position: absolute;  
      bottom:-700px;
        left: 80px;
-   
 }
 
-.facebook {
-	width: 140px;
-	height: 120px;
-     position: absolute;  
-     bottom:-900px;
-    left: 80px;
-   
+.twittername {
+    position: absolute;  
+     bottom:-650px;
+       left: 210px;
+     color: #7477bf;
+}
+
+.twitterstats {
+    position: absolute;  
+     bottom:-680px;
+       left: 200px;
+        font-size: 20px;
 }
 
 .google {
+	width: 40px;
+	height: 120px;
+     position: absolute;  
+     bottom:-1080px;
+    left: 112px;
+    z-index: 1;
+    fill:white;
+   
+}
+
+.facebookname{
+     position: absolute;  
+     bottom:-850px;
+       left: 210px;
+     color: #7477bf;
+       
+}
+
+.facebookstats {
+     position: absolute;  
+     bottom: -880px;
+       left: 210px;
+        font-size: 20px;
+}
+
+
+.facebookbox {
+     position: absolute;  
+     bottom: -900px;
+       left: 80px;
+  
+  
+}
+
+.facebook {
     	
-		width: 140px;
+		width: 40px;
 	height: 120px;
      position: absolute;  
      bottom:-1090px;
-    left: 80px;
+    left: 130px;
+    bottom:-908px;
+    left: 106px;
+       z-index: 1;
+    fill:white;
+    
   
     
 }
 
+.googlename {
+      position: absolute;  
+     bottom:-1020px;
+       left: 210px;
+     color: #7477bf;
+}
+
+.googlestats {
+         position: absolute;  
+     bottom: -1050px;
+       left: 210px;
+        font-size: 20px;
+}
+
+.googlebox {
+      position: absolute;  
+     bottom: -1070px;
+       left: 80px;
+}
+
+.socialstats {
+      font-size: 13px;
+   position: absolute;
+   bottom: -590px;
+   margin-left: 70px; 
+}
 
 /* THE POPULAR RED NOTIFICATIONS COUNTER. */
     #noti_Counter {
@@ -264,7 +345,7 @@ body{
         background:#FFF;
         border:solid 1px rgba(100, 100, 100, .20);
         -webkit-box-shadow:0 3px 8px rgba(0, 0, 0, .20);
-        z-index: 0;
+        z-index: 1;
     }
     /* AN ARROW LIKE STRUCTURE JUST OVER THE NOTIFICATIONS WINDOW */
     #notifications:before {         
@@ -291,12 +372,14 @@ body{
     }
         
     .seeAll {
-        background:#F6F7F8;
-        padding:8px;
+        background: #7477bf ;
+        padding:1px;
         font-size:12px;
         font-weight:bold;
         border-top:solid 1px rgba(100, 100, 100, .30);
         text-align:center;
+        position: relative;
+        top: -250px;
     }
     .seeAll a {
         color:#3b5998;
@@ -331,4 +414,37 @@ h1 {
    position: absolute;
    top: 750px;
    margin-left: 70px; 
+}
+
+.social {
+    font-size: 13px;
+   position: absolute;
+   bottom: -600px;
+   margin-left: 70px;  
+}
+
+.circle1 {
+    position: absolute;
+    bottom: -700px;
+    left: 78px;
+ 
+      }
+
+.circle2 {
+    position: absolute;
+    bottom: -900px;
+    left: 78px;
+ 
+      
+    
+}
+
+
+.circle3 {
+    position: absolute;
+    bottom: -1070px;
+    left: 78px;
+ 
+      
+    
 }
