--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -126,7 +126,7 @@ body {
         
     .seeAll {
         background: #7477bf ;
-        padding:1px;
+        padding:10px;
         font-size:12px;
         font-weight:bold;
         border-top:solid 1px rgba(100, 100, 100, .30);
@@ -237,11 +237,11 @@ body{
   height: 10px;
   border-radius: 5px;
   outline: none;
-  color: #9DBFAF;
+  
 }
 
 .searchTerm:focus{
-  color: #00B4CC;
+  color: #7477bf;
 }
 
 .searchButton {
@@ -252,8 +252,11 @@ body{
   top: 7px;
   border: 1px solid #7477bf;
   background: #7477bf;
+     background: url(../icons/lupa.svg) no-repeat; 
+      background-position: 55% 50%;
+  background-size: 12px;;
   text-align: center;
-  color: #fff;
+  background-color: #7477bf;
   border-radius: 4px;
   cursor: pointer;
   font-size: 20px;
@@ -311,13 +314,31 @@ body{
  #myDoughnutChart{
      position: absolute;  
      top:770px;
-       right: 78px;
-      height:35vh; 
-     width:55vw;
+       left:40px;
+      height:40vh; 
+     width:80vw;
   
    
      
 	}
+
+
+.socialstats {
+      font-size: 13px;
+   position: absolute;
+   top: 1067px;
+   margin-left: 30px; 
+   width:100px;
+}
+
+
+.social-container {
+   position: absolute;
+   top:  80px;
+   right: 370px;
+    
+}
+
 
 .twitter {
 	width: 40px;
@@ -339,14 +360,15 @@ body{
 
 .twittername {
     position: absolute;  
-     bottom:-820px;
-       left: 210px;
+     bottom:-840px;
+       left: 196px;
      color: #7477bf;
+      font-size: 20px;
 }
 
 .twitterstats {
     position: absolute;  
-     bottom:-850px;
+     bottom:-870px;
        left: 200px;
         font-size: 20px;
 }
@@ -358,21 +380,22 @@ body{
      bottom:-1110px;
     left: 112px;
     z-index: 1;
+
    
    
 }
 
 .facebookname{
      position: absolute;  
-     bottom:-930px;
-       left: 210px;
+     bottom:-945px;
+       left: 190px;
      color: #7477bf;
-       
+         font-size: 20px;
 }
 
 .facebookstats {
      position: absolute;  
-     bottom: -980px;
+     bottom: -975px;
        left: 210px;
         font-size: 20px;
 }
@@ -380,7 +403,7 @@ body{
 
 .facebookbox {
      position: absolute;  
-     bottom: -990px;
+     bottom: -989px;
        left: 80px;
   
   
@@ -391,8 +414,7 @@ body{
 		width: 40px;
 	height: 120px;
      position: absolute;  
-     bottom:-1090px;
-    left: 130px;
+  left: 130px;
     bottom:-999px;
     left: 106px;
        z-index: 1;
@@ -403,16 +425,18 @@ body{
 
 .googlename {
       position: absolute;  
-     bottom:-1040px;
-       left: 210px;
+     bottom:-1050px;
+       left: 194px;
      color: #7477bf;
+      font-size: 20px;
 }
 
 .googlestats {
          position: absolute;  
-     bottom: -1070px;
+     bottom: -1081px;
        left: 210px;
         font-size: 20px;
+   
 }
 
 .googlebox {
@@ -420,16 +444,6 @@ body{
      bottom: -1099px;
        left: 80px;
 }
-
-.socialstats {
-      font-size: 13px;
-   position: absolute;
-   bottom: -760px;
-   margin-left: 30px; 
-   width:100px;
-}
-
-
 
 h1 {
     
@@ -500,7 +514,7 @@ h1 {
 .sub-heading {
     
      position: absolute;
-        top: -60px;
+        top: -40px;
     left:50px;
   
 }
@@ -516,21 +530,21 @@ h1 {
 .member-data {
   display: inline-flex;
   align-items: center;
-  width: 100%;
+  font-size:12px;
+  width: 99%;
   padding-bottom: 10px;
   border-bottom: 1px solid #DFDFDF;
-  margin-top: 20px;
+  margin-top: 10px;
+  
 }
 
 .member-icon {
  position: absolute;
-  height: 50px;
-  width: 50px;
+  height: 20px;
+  width: 20px;
   left: -60px;
-
- 
-border-radius: 50%;  
-  transition: all .4s ease; }
+  border-radius: 50%;  
+ }
 
 .icon {
       border-radius: 100%;
@@ -552,10 +566,12 @@ input[type=text], select, textarea {
 input[type=submit] {
     background-color:  #7477bf;
     color: white;
-    padding: 12px 20px;
+    padding: 12px 21px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    margin:20px;
+    
 }
 
 input[type=submit]:hover {
@@ -566,7 +582,7 @@ input[type=submit]:hover {
     border-radius: 5px;
     padding: 20px;
       position: absolute;
-     bottom: -2200px;
+     bottom: -1950px;
     left:50px;
   
 }
@@ -574,8 +590,8 @@ input[type=submit]:hover {
 .msguser {
      font-size: 13px;
    position: absolute;
-   bottom: -1840px;
-   margin-left: 70px; 
+   bottom: -1579px;
+   margin-left: 100px; 
 }
 
 .recentact {
@@ -594,9 +610,9 @@ input[type=submit]:hover {
 
 .act-flex-container {
        position: absolute;
-        top: 350%;
+        top: 330%;
         left: 20%;
-        width: 340px;
+        width: 240px;
     
 }
 
@@ -633,8 +649,8 @@ input[type=submit]:hover {
 .settings {
         font-size: 13px;
    position: absolute;
-   bottom:  -2260px;
-   margin-left: 70px; 
+   bottom:  -1999px;
+   margin-left: 120px; 
     
     
 }
@@ -642,16 +658,16 @@ input[type=submit]:hover {
 .notitoggle {
         font-size: 13px;
    position: absolute;
-   bottom:  -2290px;
-   margin-left: 70px; 
+   bottom:  -2070px;
+   margin-left: 20px; 
     
 }
 
 .profiletoggle {
         font-size: 13px;
    position: absolute;
-   bottom:  -2399px;
-   margin-left: 70px; 
+   bottom:  -2199px;
+   margin-left: 20px; 
     
 }
 
@@ -659,8 +675,8 @@ input[type=submit]:hover {
   position: relative;
   display: inline-block;
   vertical-align: middle;
-  bottom:  -2410px;
-   margin-left: 250px;
+  bottom:  -2210px;
+   margin-left: 200px;
 }
 
 
@@ -742,16 +758,16 @@ input[type=submit]:hover {
 
 #DropDownTimezone {
     position: absolute;
-   bottom:  -2450px;
+   bottom:  -2250px;
    margin-left: 60px; 
-   width: 300px;
+   width: 200px;
        
 }
 
 .buttons {
        position: absolute;
-   bottom:  -2470px;
-   margin-left: 130px; 
+   bottom:  -2299px;
+   margin-left:70px; 
    
 }
 
