modifying responsive versions

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -246,10 +246,10 @@ body{
 
 .searchButton {
   position: absolute;  
-  right: -30px;
+  right: -50px;
   width: 26px;
   height: 24px;
-  top: 7px;
+  top: 1px;
   border: 1px solid #7477bf;
   background: #7477bf;
      background: url(../icons/lupa.svg) no-repeat; 
@@ -267,7 +267,7 @@ body{
   width: 30%;
   position: absolute;
   top: 170px;
-  left: 70%;
+  left: 75%;
   transform: translate(-50%, -50%);
 }
 
@@ -552,7 +552,7 @@ h1 {
         height:45px;
 }
 
-input[type=text], select, textarea {
+{
     width: 100%;
     padding: 12px;
     border: 1px solid #ccc;
@@ -563,7 +563,7 @@ input[type=text], select, textarea {
     resize: vertical;
 }
 
-input[type=submit] {
+#btn-submit {
     background-color:  #7477bf;
     color: white;
     padding: 12px 21px;
@@ -574,7 +574,18 @@ input[type=submit] {
     
 }
 
-input[type=submit]:hover {
+#error_message{
+    background: #F3A6A6;
+}
+#success_message{
+    background: #CCF5CC;
+}
+
+
+
+
+
+#btn-submit:hover {
     background-color: #4CAF50;
 }
 
@@ -800,24 +811,216 @@ input[type=submit]:hover {
     
     
 #navigation {
-    position: absolute;
-    left:0; top:80px; bottom: 0px;
-    width: 55px;
-    height: 1000px;
-    background-color: #4d4c72;   
+  
+
+    width: 1000px;
 }
     
-    [class^="icon"] {
-  width: 25px;
+    #header {
+      
+        width: 1000px;
+     
+      
+}
+    
+    [class^="navicon"] {
+  width: 30px;
   height: 40px;
   position: relative;
   top: 10px;
-  margin-left: 8px;
+  margin-left: 125px;
   
 }
     
+    
+.appname {
+        position: absolute;
+        top: 90%;
+        left: 3%;
+        height: 100px;
+        margin-top: -50px;
+       font-family: 'Open Sans', sans-serif;
+        font-size: 20px;
 }
 
+
+
+.userpic {
+        
+        left: 61%;
+        
+}
+.username {
+ 
+      
+        left: 650px;
+
+       
+        
+    }
+
+
+#hr {
+ 
+    left: 380px;
+  
+
+    
+}
+    
+    
+#noti_Button {
+        
+        left: 56%;
+       
+       
+}
+    
+    #noti_Counter {
+    
+        left: 56%;
+    
+    
+}
+     #notifications {
+      
+    
+        left:550px;
+         
+    }
+         
+          .messagebar-default {
+
+    width:50%;
+    height: 30px;
+    left: 100px;
+    font-size: 15px;
+    
+
+        
+}
+
+        
+    }
+    
+
+
+@media (min-width: 1024px) {
+       
+    #header {
+      
+        width: 1280px;
+      
+     
+      
+}
+    
+   .username {
+ 
+      
+        left: 1110px;
+        font-size: 17px;
+        margin-top: -45px;
+       
+        
+    } 
+    
+    
+    .userpic {
+        
+        left: 83%;
+         width:34px;
+        height:35px;
+           margin-top: -53px;
+        
+}
+    
+    
+#hr {
+ 
+    left: 995px;
+  
+
+    
+}
+    
+    
+  #noti_Button {
+        
+       left:1010px;
+       margin-top: -50px;
+         width:30px;
+        height:35px;
+       
+}
+    
+        #noti_Counter {
+    
+        left: 1010px;
+    
+    
+}
+    
+    
+        #notifications {
+      
+    
+        left:1004px;
+        
+    }
+    
+    .appname {
+      
+        font-size: 30px;
+}
+    
+
+  
+   #navigation {
+    position: absolute;
+    left:0; top:80px; bottom: 0px;
+    width: 80px;
+    height: 4400px;
+  
+} 
+    
+        [class^="navicon"] {
+  width: 35px;
+  height: 35px;
+  position: relative;
+  top: -10px;
+  margin-left: 15px;
+  margin-top: 30px;        
+  
+}
+    
+    .dash {
+   
+   font-size: 18px;
+ 
+   top: 80px;
+   margin-left: 90px; 
+}
+
+
+
+/*Resize the wrap to see the search bar change!*/
+.wrap{
+ top: 110px;
+  left: 79%;
+ 
+}   
+    
+           .messagebar-default {
+
+    width:50%;
+    height: 30px;
+    left: 200px;
+     top: 40px;
+    font-size: 15px;
+    
+    
+}
 
 
 
