--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -736,86 +736,138 @@ ul.traffic-navigation li a {
 	                left: 100px;
 	                font-size: 15px;
 	        }
+        
+        .wrap {
+             top: 169px;
+	                left: 79%;
+	        }
+        
+        
+        
 	        #myChart {
-	                max-height: 30vh;
+                    top: 330px;
+                    left: 50px;
+	                max-height: 100vh;
 	                max-width: 90vw;
 	        }
 	        #myLineChart {
-	                max-height: 30vh;
+                     top: 215px;
+                      left: 50px;
+	                max-height: 610vh;
 	                max-width: 90vw;
 	        }
 	        #myDoughnutChart {
-	                top: 1114px;
+	                top: 1217px;
 	                left: 160px;
-	                max-height: 45vh;
-	                max-width: 60vw;
+	                max-height:90vh;
+	                max-width: 58vw;
 	        }
 	        .daily {
-	                top: 650px;
+	                top: 700px;
 	        }
 	        .mobile {
-	                top: 1060px;
+	                top: 1200px;
 	        }
 	        .socialstats {
-	                top: 1660px;
-	                margin-left: 330px;
+	                top: 1690px;
+	                margin-left: 310px;
 	        }
 	        .social-container {
-	                top: 960px;
-	                right: 580px;
+	                top: 980px;
+	                right: 610px;
 	        }
 	        .member-data {
-	                margin-top: 30px;
+                   width:310px;
+	                margin-top: 2px;
+                   
+                 padding-bottom: 4px;
+	        
 	        }
 	        .flex-container {
 	                position: absolute;
-	                top: 230%;
+	                top: 467%;
 	                left: 30%;
 	        }
 	        .act-flex-container {
-	                top: 270%;
+	                top: 530%;
 	                left: 30%;
-	                width: 340px;
-	                height: 640px;
+	                width: 320px;
+	                height: 140px;
 	        }
+        
+        .act-flex-container .activity-data {
+	        width: 90%;
+	        border-bottom: 1px solid #DFDFDF;
+	}
 	        .member-act {
 	                position: absolute;
 	                top: 890px;
 	                margin-left: 70px;
+                  
 	        }
+        
+        	.activity-arrow {
+	        margin-left: 90%;
+	        margin-top: -35px;
+	      
+	}
+        
+     
+	
+        .act-bottom-info {
+	        margin-top: 1px;
+            
+            
+	}
+        
+        .contact-info {
+              margin-top: 10px;
+                   
+                 padding-bottom: 4px;
+            
+        }
+        
+        .bottom-info {
+            padding:50px;
+             margin-left: -18%;
+        }
+	
+        
 	        .msguser {
-	                font-size: 13px;
+	                font-size: 16px;
 	                position: absolute;
-	                bottom: -1910px;
-	                margin-left: 310px;
+	                bottom: -2250px;
+	                margin-left: 270px;
 	        }
 	        .container {
-	                bottom: -2100px;
-	                left: 250px;
+	                bottom: -2560px;
+	                left: 150px;
 	        }
 	        .settings {
-	                bottom: -2140px;
+	                bottom: -2592px;
 	                margin-left: 310px;
 	        }
 	        .notitoggle {
 	                font-size: 13px;
 	                position: absolute;
-	                bottom: -2220px;
+	                bottom: -2650px;
 	                margin-left: 200px;
 	        }
 	        .profiletoggle {
 	                font-size: 13px;
+                    width:120px;
 	                position: absolute;
-	                bottom: -2336px;
+	                bottom: -2756px;
 	                margin-left: 200px;
+                  
 	        }
 	        .input-toggle {
-	                position: relative;
+	                position: absolute;
 	                display: inline-block;
 	                vertical-align: middle;
-	                bottom: -2350px;
+	                bottom: -2720px;
 	                margin-left: 400px;
-	                margin-top: 140px;
+	               
 	        }
 	        .profile-settings {
 	                position: absolute;
@@ -823,14 +875,20 @@ ul.traffic-navigation li a {
 	        }
 	        #DropDownTimezone {
 	                position: absolute;
-	                bottom: -2365px;
+	                bottom: -2800px;
 	                margin-left: 200px;
 	                width: 270px;
 	        }
+        
+        #send {
+             margin-left: 50px;
+             width: 270px;
+            
+        }
 	        .buttons {
 	                position: absolute;
-	                bottom: -2415px;
-	                margin-left: 220px;
+	                bottom: -2840px;
+	                margin-left: 250px;
 	        }
 	}
 	@media (min-width: 1024px) {
@@ -951,7 +1009,7 @@ ul.traffic-navigation li a {
 	                top: -120px;
 	        }
 	        .flex-container {
-	                top: 230%;
+	                top: 200%;
 	                left: 17%;
 	                width: 26%;
 	        }
@@ -960,7 +1018,7 @@ ul.traffic-navigation li a {
 	                margin: -200px;
 	        }
 	        .act-flex-container {
-	                top: 236%;
+	                top: 106%;
 	                left: 60%;
 	        }
 	        .top-info {
@@ -972,7 +1030,7 @@ ul.traffic-navigation li a {
 	                width: 40%;
 	        }
 	        .act-flex-container .activity-data {
-	                margin-bottom: 24px;
+	                margin-bottom: 20px;
 	        }
 	        .msguser {
 	                bottom: -1150px;
