--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -3,15 +3,14 @@
 body {
         margin: 0;
         padding: 0;
-     
 }
 body {
         background: #fff;
         font-family: 'Open Sans', sans-serif;
-      }
-
-* { border: 1px solid red; }
-
+}
+* {
+        border: 1px solid red;
+}
 #header {
         position: relative;
         width: 320px;
@@ -302,18 +301,12 @@ a:active {
         list-style: none;
 }
 ul.traffic-navigation li a {
-       
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
         font-size: 10px;
         color: black;
-        margin:5px;
-      
-        
-        
-        
-    
+        margin: 5px;
 }
 .active {
         background: #90ee90;
@@ -462,8 +455,6 @@ h1 {
         position: absolute;
         top: 270%;
         left: 20%;
-    
-        
 }
 .member-data {
         display: inline-flex;
@@ -501,7 +492,7 @@ input[type=text], select, textarea {
         background-color: #7477bf;
         color: white;
         padding: 12px;
-        margin:0;
+        margin: 0;
         border: none;
         border-radius: 4px;
         cursor: pointer;
@@ -533,7 +524,6 @@ input[type=text], select, textarea {
         position: relative;
         bottom: -1660px;
         left: 10px;
-        
 }
 .msguser {
         font-size: 16px;
@@ -554,6 +544,7 @@ input[type=text], select, textarea {
 }
 .act-flex-container {
         position: absolute;
+        font-size: 16px;
         top: 1800px;
         left: 20%;
         width: 240px;
@@ -570,7 +561,7 @@ input[type=text], select, textarea {
         border-bottom: 1px solid #DFDFDF;
 }
 .activity-arrow {
-        margin-left: 96%;
+        margin-left: 70%;
         margin-top: -35px;
         width: 30%;
         position: absolute;
@@ -594,14 +585,14 @@ input[type=text], select, textarea {
         position: absolute;
         bottom: -2000px;
         margin-left: 20px;
-        width:118px;
+        width: 118px;
 }
 .input-toggle {
-            position: absolute;
-                display: inline-block;
-                vertical-align: middle;
-                bottom: -1970px;
-                margin-left: 200px;
+        position: absolute;
+        display: inline-block;
+        vertical-align: middle;
+        bottom: -1970px;
+        margin-left: 200px;
 }
 .profile-settings {
         position: absolute;
@@ -669,21 +660,12 @@ input[type=text], select, textarea {
         width: 200px;
 }
 .buttons {
-       position: absolute;
-        bottom: -2100px;
-        width:150px;
-         margin-left: -900px;
-        
-        
+        position: absolute;
+        top: 480%;
+        left: 50%;
+        width: 200px;
+        transform: translate(-100%, -200%);
 }
-
-
-               
-             
-
-
-
-
 .button1 {
         background-color: #7477bf;
         color: white;
@@ -704,12 +686,6 @@ input[type=text], select, textarea {
         background-color: gray;
         color: white;
 }
-
-
-
-
-
-
 @media (min-width: 768px) {
         #navigation {
                 width: 768px;
@@ -842,8 +818,8 @@ input[type=text], select, textarea {
         }
         .container {
                 bottom: -2060px;
-                width:500px;
-                left:100px;
+                width: 500px;
+                left: 100px;
         }
         .settings {
                 bottom: -2150px;
@@ -884,19 +860,14 @@ input[type=text], select, textarea {
                 width: 300px;
         }
         .buttons {
-               
-                bottom: -2380px;
-               
-                margin-left: 290px;
-               width:200px;
+                top: 330%;
+                transform: translate(-10%, -10%);
+        }
+        .traffic-navigation {
+                right: 190px;
+                width: 2%;
         }
 }
-.traffic-navigation {
-        right: 190px;
-        width: 2%;
-}
-
-
 @media (min-width: 1024px) {
         #header {
                 width: 1024px;
@@ -904,10 +875,7 @@ input[type=text], select, textarea {
         .username {
                 left: 890px;
                 top: 75px;
-                width:10%
-                
-               
-                
+                width: 10%
         }
         .userpic {
                 left: 840px;
@@ -1021,26 +989,17 @@ input[type=text], select, textarea {
                 top: 100%;
                 left: 17%;
                 width: 31%;
-                
         }
- 
-    
-    
         .bottom-info {
                 padding: 0 18%;
-                
         }
         .act-flex-container {
                 top: 100%;
                 left: 60%;
         }
-    
-    .recentact {
-    
-        top: -30px;
-        ;
-}
-    
+        .recentact {
+                top: -30px;
+        }
         .top-info {
                 width: 10%;
         }
@@ -1054,7 +1013,6 @@ input[type=text], select, textarea {
         }
         .act-flex-container .activity-data {
                 margin-bottom: 1px;
-            
         }
         .msguser {
                 bottom: -250px;
@@ -1066,29 +1024,24 @@ input[type=text], select, textarea {
                 margin-left: -1px;
         }
         .settings-container {
-             position: relative;
-	                top: -1586px;
-	                right: -400px;
-	                width: 100px;
-	        }
-
+                position: relative;
+                top: -1586px;
+                right: -400px;
+                width: 100px;
         }
         .notitoggle {
                 width: 200px;
-        }
-     
-        .buttons {
-                left: 278px;
-                margin:0;
-                 
-              
         }
         .arrow {
                 margin-left: 50px;
         }
         .traffic-navigation ul {
-                margin-left: -0px;
+                margin-left: 0;
                 width: 26%;
         }
+        .buttons {
+                top: 330%;
+        }
+}
 
-    
+}
