--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,8 +1,14 @@
 /*HEADER*/
 
+
+/*
+
+
 * {
     border: 1px solid red;
 }
+
+*/
 
 body {
     background: #fff;
@@ -387,29 +393,30 @@ ul.traffic-navigation li a {
     display: inline;
     position: relative;
     top: 257%;
-    left: 110px;
+    left: 55px;
 }
 
-.flex-container {
-    position: absolute;
-    top: 270%;
-    left: 20%;
+.new-members {
+    position: relative;
+    display: inline-block;
+    top: 20px;
+    left: 65px;
+    width: 240px;
 }
 
 .member-data {
-    display: inline-flex;
+    display: flex;
     align-items: center;
-    font-size: 12px;
-    width: 99%;
-    padding-bottom: 10px;
+    justify-content: space-between;
+    font-size: 14px;
+    width: 94%;
     border-bottom: 1px solid #DFDFDF;
     margin-top: 10px;
 }
 
 .member-icon {
     position: absolute;
-    left: -60px;
-    border-radius: 50%;
+    left: -50px;
 }
 
 .icon {
@@ -418,8 +425,72 @@ ul.traffic-navigation li a {
     height: 40px;
 }
 
+.recentact {
+    font-size: 16px;
+    position: absolute;
+    top: -30px;
+    margin-left: 40px;
+}
+
+.member-act {
+    position: absolute;
+    top: 890px;
+    margin-left: 70px;
+}
+
+.act-flex-container {
+    position: relative;
+    font-size: 16px;
+    bottom: -100px;
+    left: 18%;
+    width: 240px;
+}
+
+.top-info {
+    font-size: 12px;
+}
+
+.act-bottom-info {
+    display: block;
+    font-size: 8px;
+}
+
+.act-flex-container .activity-data {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    font-size: 14px;
+    width: 100%;
+    padding-bottom: 8px;
+    border-bottom: 1px solid #DFDFDF;
+}
+
+.activity-arrow {
+    margin-left: 98%;
+    position: absolute;
+    font-size: 30px;
+    color: #7477bf;
+}
+
 
 /*Form*/
+
+.msguser {
+    position: absolute;
+    bottom: -220%;
+    margin-left: 19px;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    border-radius: 5px;
+    padding: 20px;
+    position: relative;
+    bottom: -150px;
+    left: 10px;
+    width: 300px;
+}
 
 input[type=text],
 select,
@@ -469,65 +540,6 @@ textarea {
 
 #send:hover {
     background-color: #4CAF50;
-}
-
-.container {
-    border-radius: 5px;
-    padding: 20px;
-    position: relative;
-    bottom: -1660px;
-    left: 10px;
-}
-
-.msguser {
-    font-size: 16px;
-    position: absolute;
-    bottom: -1480px;
-    margin-left: 19px;
-}
-
-.recentact {
-    font-size: 16px;
-    position: absolute;
-    top: -30px;
-    margin-left: 40px;
-}
-
-.member-act {
-    position: absolute;
-    top: 890px;
-    margin-left: 70px;
-}
-
-.act-flex-container {
-    position: absolute;
-    font-size: 16px;
-    top: 1800px;
-    left: 20%;
-    width: 240px;
-}
-
-.top-info {
-    font-size: 12px;
-}
-
-.act-bottom-info {
-    display: block;
-    font-size: 8px;
-}
-
-.act-flex-container .activity-data {
-    width: 100%;
-    border-bottom: 1px solid #DFDFDF;
-}
-
-.activity-arrow {
-    margin-left: 70%;
-    margin-top: -35px;
-    width: 30%;
-    position: absolute;
-    font-size: 30px;
-    color: #7477bf;
 }
 
 .settings {
